--- a/src/pages/book-now/event-calender/style.css
+++ b/src/pages/book-now/event-calender/style.css
@@ -1,3 +1,7 @@
+.fc {
+  font-family: "Roboto", "Helvetica Neue", Helvetica !important;
+}
+
 .fc-event-title-container {
   background: #06283d;
 }
